# adam-prism

./: .env.delivery  .env.example  .env.test  .gitignore  AGENTS.md  CHANGELOG.md  CHANGES.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  DEMO_SCRIPT.md  DISTRIBUTION.md  HACKATHON_QA.md  HOW_IT_WORKS.md  LICENSE  MANUFACTURING_PHILOSOPHY.md  Modelfile  Modelfile.adam  Modelfile.othmastar-v3  PITCH_DECK.md  PLAN.md  PLAN_SHOWCASE.md  POST_HACKATHON_PLAN.md  PROGRESS.md  README.md  RIGHTS.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SHOWCASE.md  TRADEMARKS.md  TROUBLESHOOTING.md  api-spec.json  conftest.py  fix_adam.py  infrastructure.py  nano Modelfile  populate_qdrant.py  pyproject.toml  requirements.txt  run_api.py  (+3 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: cd.yml  ci.yml
adam/: __init__.py  __main__.py  scheduler.py
adam/api/: server.py
adam/channels/: CONFIG_TEMPLATE.json  __init__.py  bulk.py  telegram.py  whatsapp.py
adam/core/: permissions.py
adam/engine/: __init__.py  base.py  chat.py  context.py  generate.py  tools.py  utils.py
adam/ethics/: __init__.py  gate.py
adam/eyes/: __init__.py  browser.py
adam/learning/: learner.py
adam/memory/: store.py  system.py
adam/security/: guard.py
adam/skills/: base.py  manager.py
adam/subagents/: __init__.py  manager.py  session.py  teams.py
adam/tools/: manager.py
api/: chat_store.py  server.py  server.py.checkpoint1  server.py.checkpoint2  server.py.checkpoint3
apps/desktop/: package-lock.json  package.json
apps/mobile/: pubspec.yaml
backend/: conftest.py  main.py
backend/adam/: __init__.py  __main__.py  config.py  i18n.py  infrastructure.py  protocols.py  scheduler.py
backend/tests/: test_phase7.py
clients/python-sdk/: README.md  setup.py
config/: default.json  default.json.checkpoint1  settings.py
core/: engine.py  learning.py  memory.py  memory_store.py  meta_learner.py  notebook.py  permissions.py  trace_recorder.py  voice_pipeline.py
data/learning/: generated_skills.json  knowledge.json  reflections.json
data/training/: MODEL_COMPLETE_IDENTITY.md  MODEL_IDENTITY.md  PIPELINE.md  QUALITY_EVALUATION.md  README.md  all_conversations.json  batch1_final.json  batch1_part3.json  batch1_part4.json  batch1_part5.json  batch1_part6.json  batch1_remaining.json  batch1_rest.json  batch1_scada.json  batch1_total.json  batch2_part1.json  batch2_part2.json  batch2_part3.json  batch2_part4.json  batch2_part5.json  batch2_total.json  batch3_total.json  batch4_total.json  batch5_total.json  batch6_total.json  batch7_total.json  batch8_total.json  build_consciousness_data.py  bulk_rewrite.py  bulk_rewrite_state.json  bulk_rewrite_v2.py  compare_v2_vs_existing.py  dataset_stats.json  deepseek_all.json  deepseek_all_links.json  deepseek_conversations.json  educational_convs.json  educational_deep.json  educational_deep_v2.json  gemini_all.json  (+15 more)
data/uploads/: 1780862724_main.py  1780891029_upload.txt
deploy/: .env.example  Dockerfile.api  Dockerfile.inference  Dockerfile.nginx  Dockerfile.web  backup.sh  bot_entrypoint.py  docker-compose.yml  entrypoint.sh  generate_ssl.sh  modal_deploy.py  nginx.conf  report-ar.md  restore.sh
deploy/gitops/: README.md
deploy/prometheus/: prometheus.yml
desktop-app/: README.md  main.js  package.json  preload.js
docs/: COMPARISON.md  CRUXSIGHT_INTEGRATION.md  DISASTER_RECOVERY.md  GUIDE.md  README.md  SERVICES.md  adam-prism-ARCHITECTURE.md  adam-prism-CONTRIBUTING.md  adam-prism-SECURITY.md  adam-prism-iqrani-en.html  adam-prism-iqrani.html  adam-prism-understanding.html  customize-with-ai.md
docs/adr/: 0001-fastapi-over-flask.md  0002-qdrant-vector-store.md  0003-ollama-default-llm.md  0004-multi-tenant-shared-schema.md  0005-apache-2-license.md  0006-hmac-webhook-signing.md
docs/carnegie/: adam-prism-carnegie.html
docs/evaluation/: التقرير-الشامل.md
docs/guide/: adam-prism-guide.html
docs/mcp/: README.md
docs/plugins/: DEVELOPMENT.md
docs/skills/: MARKETPLACE.md
ethics/: ethics_gate.py
examples/: 01_basic_chat.py  02_custom_provider.py  03_custom_channel.py  04_skill_creation.py  05_knowledge_rag.py  06_predictive_monitoring.py  README.md  quickstart.sh
frontend/: SHOWCASE_README.md  index.html
frontend/desktop-app/: .gitignore  electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json
frontend/mobile-app/: analysis_options.yaml  l10n.yaml
frontend/mobile-app-expo/: README.md  app.config.ts  app.json  package.json
frontend/vscode-extension/: LICENSE  README.md  adam-prism-1.0.0.vsix  package-lock.json
frontend/web-ui/: .env.example  next.config.ts  package.json  (+1 more)
memory/: memory_system.py
notebook/: index.json  notebook_system.py
pipeline/: channels.py  live_summarizer.py  train_lora.py
scripts/: adam_doctor.py  build_dataset.py  build_v6.py  deploy_wiki.sh  export_openapi.py  generate_educational_data.py  health_monitor.py  inference_server.py  ingest_knowledge.py  merge_lora.py  migrate_v1_to_v2.py  populate_qdrant_v2.py  run_all_tests.sh  run_othmastar.sh  setup.sh  test_all_tools.py  train_lora.py
security/: security_coordinator.py  security_guard.py  security_guard.py.bak  security_guard.py.checkpoint1  security_guard.py.checkpoint2
src/: test_validate_email.test.py
templates/: NDA.md
tests/: conftest.py  test_api.py  test_channels.py  test_discord_bot.py  test_engine.py  test_ethics.py  test_integration.py  test_learning.py  test_memory.py  test_notebook.py  test_phase5.py  test_phase6.py  test_pipeline.py  test_plugins.py  test_predictive.py  test_providers.py  test_scheduler.py  test_security.py  test_security_guard.py  test_server.py  test_skills.py  test_subagent_teams.py  test_subagents.py  test_tools.py
vscode-extension/: .vscodeignore  package.json  tsconfig.json
web-ui/: next.config.ts  package-lock.json  package.json
wiki/: API-Reference.md  Architecture.md  CI-CD.md  Channels.md  Home.md  Session-Log.md  Setup.md
(+480 files in other folders)
