[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adam-prism"
version = "1.0.0b1"
description = "Egyptian Arabic conscious AI framework — personal digital twin with ethics, memory, and tools"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Mohamed Othman", email = "othmastar@gmail.com"},
]
keywords = ["ai", "agent", "egyptian-arabic", "consciousness", "digital-twin", "llm", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: Arabic",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Communications :: Chat",
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "playwright>=1.40.0",
    "qdrant-client>=1.7.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "Pillow>=10.0.0",
    "mcp[cli]>=1.27.0",
    "apscheduler>=3.11.0",
    "PyMuPDF>=1.23.0",
    "python-docx>=1.1.0",
    "edge-tts>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/othmastar/adam-prism"
Repository = "https://github.com/othmastar/adam-prism"
Documentation = "https://github.com/othmastar/adam-prism#readme"

[project.scripts]
adam-prism = "adam.__main__:main"
adam = "adam.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.8",
    "mypy>=1.13",
    "coverage>=7.6",
]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["data/*", "wiki/*", "deploy/*", "old_*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "E402", "F403", "F405", "B904", "RUF012", "B008", "RUF001", "N806", "E701", "E702", "SIM102", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_any_unimported = false
warn_unused_ignores = true
exclude = [
    "data/",
    "wiki/",
    "deploy/",
    "old_main.py",
    "old_bot.py",
    "core/",
    "memory/",
    "notebook/",
]

[tool.coverage.run]
source = ["adam"]
omit = [
    "*/tests/*",
    "*/old_*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "logger.",
]
fail_under = 60

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-k \"not slow\"')",
    "asyncio: marks tests as async",
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["adam*"]
